--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+server.port=7001
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=mybatis_test
 spring.datasource.password=mybatis_test
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_test?useUnicode=true&characterEncoding=utf8
 
-mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+###别名处理器；这样我们就可以在mapper文件中resultType里面不用写入类的全类名，只写类名（大小写都可以）。
+# 另外别名不区分大小写。如果同一个包下有重复名称的类，可以使用@Alias注解来为某个类型指定新的别名
 mybatis.type-aliases-package=com.gnnt.mybatisgengerator.model
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
