设计模式练习  以及 jdk8新特性stream练习使用

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 # 另外别名不区分大小写。如果同一个包下有重复名称的类，可以使用@Alias注解来为某个类型指定新的别名
 mybatis.type-aliases-package=com.gnnt.mybatisgengerator.model
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+##shiro加密配置
+shiro.encodeWay=md5
+shiro.encodeNum=2
