解决整合shiro后userService事务不生效问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.gnnt.mybatisgengerator.model
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-##shiroº”√‹≈‰÷√
-shiro.encodeWay=md5
-shiro.encodeNum=2
+logging.level.web=DEBUG
+##shiro≈‰÷√
+shiro.algorithm-name=md5
+shiro.times=2
+shiro.remember-cookie-age=480
+shiro.global-session-timeout=300000
